--- a/app/views/articles/edit.html.erb
+++ b/app/views/articles/edit.html.erb
@@ -1,4 +1,4 @@
-<h1>Create an article</h1>
+<h2>Edit Articles</h2>
 
 
 <% if @article.errors.any? %>
@@ -28,3 +28,5 @@
 
 
 <%  end %>
+
+<%= link_to 'Back to articles listing', articles_path %>
