--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,3 +1,5 @@
-<h1>This is home page</h1>
+<h1>This is home page of my blog</h1>
 
+
+<%= link_to "Alpha Blog", articles_path %> |
 <%= link_to "About", about_path %>
