--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,5 +1,6 @@
-<h1>This is home page of my blog</h1>
 
+<div class="center jumbotron">
+  <h1>Alpha Blog</h1>
+  <%= link_to "Sign up now", '#', class: 'btn btn-danger btn-primary btn-lg btn-xlarge' %>
+  </div>
 
-<%= link_to "Alpha Blog", articles_path %> |
-<%= link_to "About", about_path %>
