--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -43,6 +43,14 @@ $navbar-default-bg: black;
   font-size: 1.7em;
 /*   background-color: black; */
 }
+.article-actions{
+  border-top: 1px solid #eaeaea;
+  padding-top: 5px;
+}
+
+.description{
+  margin-top: 0;
+}
 
 footer{
   margin-top:45px;
@@ -68,3 +76,4 @@ footer ul li{
   float: left;
   margin-left: 15px;
 }
+
