--- a/app/views/layouts/_navigation.html.erb
+++ b/app/views/layouts/_navigation.html.erb
@@ -17,7 +17,7 @@
       <ul class="nav navbar-nav">
 
         <li><%= link_to 'Articles', articles_path %></li>
-        <li><a href="#">Link</a></li>
+        <li><a href="https://github.com/moyuan5989/">Github</a></li>
         <li class="dropdown">
           <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Actions <span class="caret"></span></a>
           <ul class="dropdown-menu">
