--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -1,7 +1,7 @@
 <div class="container">
   <footer class="footer">
     <small>
-      Copyright &copy; <a href="http://www.google.com"> Alpha Blog</a>
+      Copyright &copy; <a href="http://www.google.com"> Moyuan Blog</a>
       by MOYUAN
        </small>
   <nav>
